# switch

./: .gitignore  .switch.toml  README.md  pyproject.toml
src/switch/: datatypes.py  main.py  project.py  select.py  types.py  utils.py
src/switch/commands/: __init__.py  add.py  config.py  init.py  rm.py  switch.py  version.py
