[project]
name = "switch"
version = "0.7.2"
description = "A program to switch between projects"
requires-python = ">=3.11"
dependencies = [
    "argparse",
    "python-ulid",
    "toml",
    "typing-extensions",
    "rich",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
switch = "switch.main:main"
