[project]
name = "switch"
version = "0.8.1"
description = "A program to switch between projects"
requires-python = ">=3.11"
dependencies = [
    "argparse",
    "python-ulid",
    "toml",
    "typing-extensions",
    "rich",
    "readchar",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
switch = "switch.main:main"
