[project]
name = "switch"
version = "0.9.5"
description = "A program to switch between projects"
requires-python = ">=3.12"
dependencies = [
    "python-ulid",
    "toml",
    "typing-extensions",
    "rich",
    "readchar",
    "cyclopts>=4.16.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
switch = "switch.main:main"
